--- a/src/app.html
+++ b/src/app.html
@@ -76,17 +76,17 @@
 
 
   <div class="container">
-    <div><img src="E:\Aurelia-front\src\images\pin2.jpg" alt="Avatar" ></div>
-    <div><img src="E:\Aurelia-front\src\images\puzzle.jpg" alt="Avatar"></div>
-    <div><img src="E:\Aurelia-front\src\images\shirt.jpg" alt="Avatar"></div>
-    <div> <img src="E:\Aurelia-front\src\images\playingcards.jpg" alt="Avatar"></div>
+    <div><img src="../src/images/pin2.jpg" alt="Avatar" ></div>
+    <div><img src="../src/images/puzzle.jpg" alt="Avatar"></div>
+    <div><img src="../src/images/shirt.jpg" alt="Avatar"></div>
+    <div> <img src="../src/images/playingcards.jpg" alt="Avatar"></div>
 </div>
 
   <footer class="page-footer">
     <div class="container">
         <div class="row">
             
-                <h6 class="text-uppercase font-weight-bold">Additional Information</h6>
+                <h6 class="text-uppercase font-weight-bold">To our customers</h6>
                 <p>Our products are in connection with you, the customer, so it`s essencial to leave a review for us to improve our line of products</p>
         </footer>
       
